--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <link rel="icon" type="image/x-icon" href="https://lohenberg.github.io/favicon.ico">
 <link rel="apple-touch-icon-precomposed" href="https://lohenberg.github.io/favicon.png">
 
-<link rel="stylesheet" href="https://lohenberg.github.io/css/light.css?rnd=1675703748" />
+<link rel="stylesheet" href="https://lohenberg.github.io/css/light.css?rnd=1675833490" />
 <style>
 
     [data-theme="dark"] {   
@@ -50,7 +50,7 @@
 
 </style>
 
-<link rel="stylesheet" href="https://lohenberg.github.io/css/style.css?rnd=1675703748" />
+<link rel="stylesheet" href="https://lohenberg.github.io/css/style.css?rnd=1675833490" />
 
 
 
@@ -81,7 +81,7 @@
         <header class="common-header"> 
             
                 <h1 class="site-title">
-    <a href="/"><img src="https://lohenberg.github.io/css/title.png" /></a>
+    <a href="/"><img src="https://lohenberg.github.io/css/title.png" width="134" /></a>
 </h1>
 
     <nav>
